src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail02.jova
class Main {

  private int error;

  public int main() {
    return 0;
  }

}